# rust-projects

./: .gitignore  README.md
axum/ddd-rs/: Cargo.toml
axum/ddd-rs/src/: lib.rs  main.rs
axum/ddd-rs/tests/: value_object.rs
axum/note-maker/: Cargo.toml  note.csv
axum/note-maker/src/: main.rs
axum/note-maker/templates/: base.html  memo.html  sign_up.html
axum/rustwi/: Cargo.toml
axum/rustwi/src/: main.rs
cli/catr/: Cargo.toml
cli/catr/src/: lib.rs  main.rs
cli/catr/tests/: cli.rs
cli/echor/: Cargo.toml
cli/echor/src/: main.rs
cli/echor/tests/: cli.rs
cli/headr/: Cargo.toml
cli/headr/src/: lib.rs  main.rs
cli/headr/tests/: cli.rs
cli/hello/tests/: cli.rs
cli/wcr/: Cargo.toml  README.md  err
cli/wcr/src/: lib.rs  main.rs
ddd-rs/: Cargo.toml  README.md
ddd-rs/src/: lib.rs  value_object.rs
example/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
my-redis/src/: main.rs
snip/src/: extensions.rs  lib.rs  main.rs
snip/src/extensions/: extends.rs
the-book/adder/src/: lib.rs
the-book/concurrency-examples/: '  Cargo.toml
the-book/concurrency-examples/src/: lib.rs
the-book/minigrep/src/: lib.rs  main.rs
the-book/rectangles/src/: main.rs
the-book/restaurant/src/: lib.rs
thread/src/: main.rs
variables/src/: main.rs
web-scraping/ap4s/: Cargo.toml  hoge.html
web-scraping/ap4s/src/: main.rs
web-scraping/web-scraper/: Cargo.toml
web-scraping/web-scraper/src/: main.rs
yew/git-search-app/: Cargo.toml  README.md  Trunk.toml  index.html  output.css  package-lock.json  package.json  tailwind.config.js
yew/git-search-app/docs/: api.yml
yew/git-search-app/docs/paths/: index.yml
yew/git-search-app/docs/schemas/models/: repo.yml
yew/git-search-app/docs/schemas/responses/: repos.yml
yew/git-search-app/openapi/: README.md
yew/git-search-app/openapi/.openapi-generator/: FILES
yew/git-search-app/openapi/docs/: DefaultApi.md  Repo.md  Repos.md
yew/git-search-app/openapi/src/apis/: configuration.rs  default_api.rs
yew/git-search-app/openapi/src/models/: mod.rs  owner.rs  repo.rs  repos.rs  repos_response.rs
yew/git-search-app/src/: lib.rs  main.rs  state.rs
yew/git-search-app/static/assets/css/: main.css
yew/yew-app/: Cargo.toml  package-lock.json
yew/yew-app/src/: main.rs
yew/yew-app/src/web_site_test/: tutorial.rs
yew/yew-mobile-sample/: Cargo.toml  Trunk.toml
yew/yew-mobile-sample/openapi/.openapi-generator/: FILES
yew/yew-mobile-sample/openapi/docs/: Owner.md  Repo.md  ReposResponse.md
yew/yew-mobile-sample/openapi/src/models/: owner.rs
yew/yew-mobile-sample/src-tauri/: Cargo.toml  tauri.conf.json
yew/yew-styles-example/: Cargo.toml  package-lock.json
yew/yew-styles-example/src/: main.rs
yew/yew-tailwind-example/: Cargo.toml  index.html  tailwind.config.js  tailwind.css
yew/yew-tailwind-example/src/: main.rs
yew/yew_styles/: Cargo.toml
