[package]
name = "ddd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
sqlx-macros = "0.6.2"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.0"
dotenv_codegen = "0.15.0"
anyhow = "1.0.26"
log = "0.4.0"
env_logger = "0.9.0"