[package]
name = "ap4s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = {version = "0.11.12", features = ["blocking"]}
per = "0.12.0"
url = "2.3.1"