[package]
name = "ap4s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = {version = "0.11.12", features = ["blocking"]}
scraper = "0.12.0"
urlencoding="2.1.2"
regex = "1.6.0"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
failure = "0.1.8"