[package]
name = "git-search-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
serde_derive = "1"
yew = { version = "0.20", features = ["csr"] }
stylist = { version = "0.12.0", features = ["yew_integration"] }
openapi = { path = "openapi" }
gloo = "0.8"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
